--- a/Ed25519.html
+++ b/Ed25519.html
@@ -22,7 +22,7 @@
 
 		<div class="section-title">
 		<h1>Ed25519<br>Signature Tool</h1>
-		<p>Please read the <a href="#documentation">documentation</a> for more information, and read the <a href="LICENSE.txt">licence</a> before use.</p>
+		<p>Please read the <a href="#documentation">documentation</a> for more information, and read the <a href="LICENSE">licence</a> before use.</p>
 		</div> <!--/.section-title-->
 
 		<div class="section-tests">
