--- a/Ed25519.html
+++ b/Ed25519.html
@@ -161,6 +161,12 @@
 		<p>For further details on how the components of the JWS Compact Serialization are computed, please refer to <a href="https://datatracker.ietf.org/doc/html/rfc7515#section-5.1">RFC 7515 section 5.1</a>.</p>
 	</div> <!--/.doc-->
 
+	<div class="container container-footer">
+		<div class="section section-footer">
+			Version 1.1.1 &bull; Copyright &copy; 2019-2024 <a href="https://github.com/isaacchua">Isaac Chua</a>, <a href="https://github.com/ronnypmuliawan">Ronny Paulus Muliawan</a>, and Wei Ping Tan &bull; <a href="LICENSE">License</a>
+		</div> <!--/.section-->
+	</div> <!--/.container-->
+
 	<script src="js/vendor/jquery-3.3.1.min.js"></script>
 	<script src="js/vendor/sodium.js"></script>
 	<script src="js/main.js"></script>
