--- a/Ed25519.html
+++ b/Ed25519.html
@@ -30,7 +30,7 @@
 				<div class="container container-button-box">
 					<div class="button-box">
 						<input type="button" id="runVectorTests" value="Run Vector Tests" class="btn"></input>
-						<p>Test the algorithms according to the test vectors provided in RFC8037</p>
+						<p>Test the algorithms according to the test vectors provided in <a href="https://datatracker.ietf.org/doc/html/rfc8037#appendix-A">RFC8037</a></p>
 					</div>
 					<div class="button-box">
 						<input type="button" id="runGeneratorTests" value="Run Generator Tests" class="btn"></input>
@@ -78,7 +78,7 @@
 				<div class="container container-content">
 					<div class="section section-content">
 						<h3>JWS Protected Header</h3>
-						<p>The header MUST conform to the requirements of <a href="https://tools.ietf.org/html/rfc7515#section-4">RFC 7515 section 4</a>. <a href="#doc-jws-protected-header">[?]</a></p>
+						<p>The header MUST conform to the requirements of <a href="https://datatracker.ietf.org/doc/html/rfc7515#section-4">RFC 7515 section 4</a>. <a href="#doc-jws-protected-header">[?]</a></p>
 
 						<p><textarea id="jwsProtectedHeader" rows="4" class="textfield">{"alg":"EdDSA"}</textarea></p>
 
@@ -123,27 +123,27 @@
 		<h1 id="documentation">Documentation</h1>
 		<h2>Common Use Cases</h2>
 		<h3>Generate an Ed25519 Keypair</h3>
-		<p>This tool is able to generate Ed25519 keypairs and output them in JSON Web Key (JWK) format per <a href="https://tools.ietf.org/html/rfc7517">RFC 7517</a> and <a href="https://tools.ietf.org/html/rfc8037">RFC 8037</a>. Click the "Generate Keypair" button to randomly generate a keypair. A <span class="seed-length"></span>-byte seed may be provided, and the tool is able to output the date and time the keys were generated, and compute its user-defined expiry date.</p>
+		<p>This tool is able to generate Ed25519 keypairs and output them in JSON Web Key (JWK) format per <a href="https://datatracker.ietf.org/doc/html/rfc7517">RFC 7517</a> and <a href="https://datatracker.ietf.org/doc/html/rfc8037">RFC 8037</a>. Click the "Generate Keypair" button to randomly generate a keypair. A <span class="seed-length"></span>-byte seed may be provided, and the tool is able to output the date and time the keys were generated, and compute its user-defined expiry date.</p>
 		<h3>Generate the JWK Thumbprint of an Ed25519 JWK</h3>
-		<p>This tool is able to generate the SHA-256 JWK Thumbprint of a Ed25519 JWK given the public JWK per <a href="https://tools.ietf.org/html/rfc7638">RFC 7638</a> and <a href="https://tools.ietf.org/html/rfc8037">RFC 8037</a>. Enter the JWK into the "Public JWK" text box and click the "Generate JWK Thumbprint" button.</p>
+		<p>This tool is able to generate the SHA-256 JWK Thumbprint of a Ed25519 JWK given the public JWK per <a href="https://datatracker.ietf.org/doc/html/rfc7638">RFC 7638</a> and <a href="https://datatracker.ietf.org/doc/html/rfc8037">RFC 8037</a>. Enter the JWK into the "Public JWK" text box and click the "Generate JWK Thumbprint" button.</p>
 		<h3>Generate an Ed25519-signed JWS</h3>
-		<p>This tool is able to generate an Ed25519-signed JSON Web Signature (JWS) per <a href="https://tools.ietf.org/html/rfc7515">RFC 7515</a> and <a href="https://tools.ietf.org/html/rfc8037">RFC 8037</a>. Enter the Secret JWK, JWS Protected Header, and JWS Payload, and then click the "Generate JWS Details" button. The JWS in Compact Serialization format will be computed.</p>
+		<p>This tool is able to generate an Ed25519-signed JSON Web Signature (JWS) per <a href="https://datatracker.ietf.org/doc/html/rfc7515">RFC 7515</a> and <a href="https://datatracker.ietf.org/doc/html/rfc8037">RFC 8037</a>. Enter the Secret JWK, JWS Protected Header, and JWS Payload, and then click the "Generate JWS Details" button. The JWS in Compact Serialization format will be computed.</p>
 		<h3>Deconstruct a JWS</h3>
-		<p>This tool is able to extract the JWS Protected Header and JWS Payload of a given JWS in Compact Serialization format per <a href="https://tools.ietf.org/html/rfc7515">RFC 7515</a>. Enter the JWS Compact Serialization data, and click the "Deconstruct JWS" button. The JWS Protected Header and JWS Payload will be shown on their fields respectively.</p>
+		<p>This tool is able to extract the JWS Protected Header and JWS Payload of a given JWS in Compact Serialization format per <a href="https://datatracker.ietf.org/doc/html/rfc7515">RFC 7515</a>. Enter the JWS Compact Serialization data, and click the "Deconstruct JWS" button. The JWS Protected Header and JWS Payload will be shown on their fields respectively.</p>
 		<h3>Validate an Ed25519-signed JWS</h3>
-		<p>This tool is able to validate an Ed25519-signed JWS per <a href="https://tools.ietf.org/html/rfc7515">RFC 7515</a> and <a href="https://tools.ietf.org/html/rfc8037">RFC 8037</a>. Enter the Public JWK and JWS Compact Serialization data, and click the "Validate Ed25519-signed JWS" button. A prompt will show the result of the validation.</p>
+		<p>This tool is able to validate an Ed25519-signed JWS per <a href="https://datatracker.ietf.org/doc/html/rfc7515">RFC 7515</a> and <a href="https://datatracker.ietf.org/doc/html/rfc8037">RFC 8037</a>. Enter the Public JWK and JWS Compact Serialization data, and click the "Validate Ed25519-signed JWS" button. A prompt will show the result of the validation.</p>
 		<h2>Overview</h2>
 		<p>This tool is used to generate keys, sign, and verify using the Ed25519 signature algorithm in the context of:
 			<ul>
-				<li>JSON Web Signature (JWS) [<a href="https://tools.ietf.org/html/rfc7515">RFC7515</a>]</li>
-				<li>JSON Web Key (JWK) [<a href="https://tools.ietf.org/html/rfc7517">RFC7517</a>]</li>
-				<li>JSON Web Key (JWK) Thumbprint [<a href="https://tools.ietf.org/html/rfc7638">RFC7638</a>]</li>
-				<li>Edwards-Curve Digital Signature Algorithm (EdDSA) [<a href="https://tools.ietf.org/html/rfc8032">RFC8032</a>]</li>
-				<li>CFRG Elliptic Curve Diffie-Hellman (ECDH) and Signatures in JSON Object Signing and Encryption (JOSE) [<a href="https://tools.ietf.org/html/rfc8037">RFC8037</a>]</li>
+				<li>JSON Web Signature (JWS) [<a href="https://datatracker.ietf.org/doc/html/rfc7515">RFC7515</a>]</li>
+				<li>JSON Web Key (JWK) [<a href="https://datatracker.ietf.org/doc/html/rfc7517">RFC7517</a>]</li>
+				<li>JSON Web Key (JWK) Thumbprint [<a href="https://datatracker.ietf.org/doc/html/rfc7638">RFC7638</a>]</li>
+				<li>Edwards-Curve Digital Signature Algorithm (EdDSA) [<a href="https://datatracker.ietf.org/doc/html/rfc8032">RFC8032</a>]</li>
+				<li>CFRG Elliptic Curve Diffie-Hellman (ECDH) and Signatures in JSON Object Signing and Encryption (JOSE) [<a href="https://datatracker.ietf.org/doc/html/rfc8037">RFC8037</a>]</li>
 			</ul>
 		</p>
-		<p>The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in <a href="https://tools.ietf.org/html/rfc2119">RFC 2119</a>.</p>
-		<p>All Base64 data used in this tool conform to the Base 64 URL-safe encoding without padding characters defined in <a href="https://tools.ietf.org/html/rfc4648#section-5">RFC 4648 section 5</a>.</p>
+		<p>The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in <a href="https://datatracker.ietf.org/doc/html/rfc2119">RFC 2119</a>.</p>
+		<p>All Base64 data used in this tool conform to the Base 64 URL-safe encoding without padding characters defined in <a href="https://datatracker.ietf.org/doc/html/rfc4648#section-5">RFC 4648 section 5</a>.</p>
 		<p>Built using <a href="https://github.com/jedisct1/libsodium.js">libsodium.js</a>, the JavaScript port of <a href="https://libsodium.gitbook.io/">libsodium</a>, <a href="https://jquery.com/">jQuery</a>, and <a href="https://html5boilerplate.com/">HTML5 Boilerplate</a>.</p>
 		<h2>Usage Notes</h2>
 		<h3 id="doc-production-keys">Generating Production Keys</h3>
@@ -154,11 +154,11 @@
 		<p>The RFCs do not define "issued at" and "expiry" dates on JSON Web Keys (JWK). Hence, the fields, <code>"iat"</code> and <code>"exp"</code>, used here are custom to this tool, and it is entirely up to the application to make use of these fields. Do note that these fields may be modified by hand and thus should not be entirely relied upon to manage key expiries.</p>
 		<p>The expiry years provided to this tool must be a positive number, in steps of 0.01 years.</p>
 		<h3 id="doc-jwk-thumbprint">JWK Thumbprint Limitations</h3>
-		<p>The JWK Thumbprint according to <a href="https://tools.ietf.org/html/rfc7638">RFC 7638</a> should be computed only with public key material (<a href="https://tools.ietf.org/html/rfc7638#section-3.2.1">section 3.2.1</a>), and only on mandatory parameters (<a href="https://tools.ietf.org/html/rfc7638#section-3.2.2">section 3.2.2</a>). Because this tool is designed for the Ed25519 signature algorithm, it only knows which are the mandatory public key parameters for the Ed25519 algorithm. Hence, this tool MUST NOT be used to generate JWK Thumbprints of non-Ed25519 JWKs.</p>
+		<p>The JWK Thumbprint according to <a href="https://datatracker.ietf.org/doc/html/rfc7638">RFC 7638</a> should be computed only with public key material (<a href="https://datatracker.ietf.org/doc/html/rfc7638#section-3.2.1">section 3.2.1</a>), and only on mandatory parameters (<a href="https://datatracker.ietf.org/doc/html/rfc7638#section-3.2.2">section 3.2.2</a>). Because this tool is designed for the Ed25519 signature algorithm, it only knows which are the mandatory public key parameters for the Ed25519 algorithm. Hence, this tool MUST NOT be used to generate JWK Thumbprints of non-Ed25519 JWKs.</p>
 		<h3 id="doc-jws-protected-header">JWS Protected Header Requirements</h3>
-		<p>According to <a href="https://tools.ietf.org/html/rfc7515#section-7.1">RFC 7515 section 7.1</a>, a JWS serialized according to the Compact Serialization format MUST contain a JWS Protected Header. And according to <a href="https://tools.ietf.org/html/rfc7515#section-4">section 4</a>, such header MUST contain the <code>"alg"</code> parameter. In a Ed25519-signed JWS, per <a href="https://tools.ietf.org/html/rfc8037">RFC 8037</a>, the <code>"alg"</code> parameter MUST be equal to <code>"EdDSA"</code>. This tool will validate that the JWS Protected Header contains the <code>"alg"</code> parameter equal to <code>"EdDSA"</code>. The tool will ignore other parameters in the header, and will not validate the <code>"crit"</code> parameter according to <a href="https://tools.ietf.org/html/rfc7515#section-4.1.11">section 4.1.11</a>.</p>
+		<p>According to <a href="https://datatracker.ietf.org/doc/html/rfc7515#section-7.1">RFC 7515 section 7.1</a>, a JWS serialized according to the Compact Serialization format MUST contain a JWS Protected Header. And according to <a href="https://datatracker.ietf.org/doc/html/rfc7515#section-4">section 4</a>, such header MUST contain the <code>"alg"</code> parameter. In a Ed25519-signed JWS, per <a href="https://datatracker.ietf.org/doc/html/rfc8037">RFC 8037</a>, the <code>"alg"</code> parameter MUST be equal to <code>"EdDSA"</code>. This tool will validate that the JWS Protected Header contains the <code>"alg"</code> parameter equal to <code>"EdDSA"</code>. The tool will ignore other parameters in the header, and will not validate the <code>"crit"</code> parameter according to <a href="https://datatracker.ietf.org/doc/html/rfc7515#section-4.1.11">section 4.1.11</a>.</p>
 		<h3 id="doc-jws-compact-serial">JWS Compact Serialization Computation</h3>
-		<p>For further details on how the components of the JWS Compact Serialization are computed, please refer to <a href="https://tools.ietf.org/html/rfc7515#section-5.1">RFC 7515 section 5.1</a>.</p>
+		<p>For further details on how the components of the JWS Compact Serialization are computed, please refer to <a href="https://datatracker.ietf.org/doc/html/rfc7515#section-5.1">RFC 7515 section 5.1</a>.</p>
 	</div> <!--/.doc-->
 
 	<script src="js/vendor/jquery-3.3.1.min.js"></script>
