Added disabled functionality to checkboxes.

--- a/Ed25519.html
+++ b/Ed25519.html
@@ -50,7 +50,7 @@
 				<p>Click the button below to generate a Ed25519 keypair. It is NOT RECOMMENDED to use this tool to generate production keys. <a href="#doc-production-keys">[?]</a></p>
 				<p>
 					<input type="button" id="generateKeypair" value="Generate Keypair"  class="btn"></input><br/>
-					<input type="checkbox" id="useSeed"></input> <label for="useSeed">Use seed  <a href="#doc-keypair-seed">[?]</a> :</label> <input type="text" id="keySeed" size="50" class="textfield"></input>
+					<input type="checkbox" id="useSeed"></input> <label for="useSeed">Use seed  <a href="#doc-keypair-seed">[?]</a> :</label> <input type="text" id="keySeed" size="50" class="textfield" disabled></input>
 					
 					<br/><br/>
 
