--- a/Ed25519.html
+++ b/Ed25519.html
@@ -163,7 +163,7 @@
 
 	<div class="container container-footer">
 		<div class="section section-footer">
-			Version 1.1.1 &bull; Copyright &copy; 2019-2024 <a href="https://github.com/isaacchua">Isaac Chua</a>, <a href="https://github.com/ronnypmuliawan">Ronny Paulus Muliawan</a>, and Wei Ping Tan &bull; <a href="LICENSE">License</a>
+			Version 1.1.1 &bull; Copyright &copy; 2019-2024 <a href="https://github.com/isaacchua">Isaac Chua</a>, <a href="https://github.com/ronnypmuliawan">Ronny Paulus Muliawan</a>, and Wei Ping Tan &bull; <a href="LICENSE">License</a> &bull; <a href="https://isaacchua.github.io/ed25519-signature-tool/Ed25519.html">Permalink</a>
 		</div> <!--/.section-->
 	</div> <!--/.container-->
 
